C2: assert(false) failed: malformed control flow

XMLWordPrintable

    • b22
    • x86_64, aarch64
    • linux, windows

      The following test failed in the JDK21 CI:

      applications/javafuzzer/MediumTest.java

      Here's a snippet from the log file:

      Summary of the JavaFuzzer run:
      ------------------------------
      Host: win2019-x64-473874
      Tests: 12 x 50
      Args: -conf config.yml

      Started at: Fri Apr 28 18:06:03 GMT 2023


      r11- 50: 35 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 15 Reference Java failures
      r3- 50: 33 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 17 Reference Java failures
      r10- 50: 31 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 19 Reference Java failures
      r8- 50: 33 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 17 Reference Java failures
      r7- 50: 32 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 18 Reference Java failures
      r4- 50: 31 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 19 Reference Java failures
      r2- 50: 32 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 18 Reference Java failures
      r5- 50: 31 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 19 Reference Java failures
      r12- 50: 30 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 20 Reference Java failures
      r6- 50: 33 passed, 1 crashes, 0 fails, 0 hangs, 0 incorrect tests, 16 Reference Java failures
      r1- 50: 27 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 23 Reference Java failures
      r9- 50: 29 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 21 Reference Java failures

      Finished at: Fri Apr 28 19:23:07 GMT 2023


      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (c:\\sb\\prod\\1682641347\\workspace\\open\\src\\hotspot\\share\\opto\\compile.cpp:4003), pid=29116, tid=32968
      # assert(false) failed: malformed control flow
      #
      # JRE version: Java(TM) SE Runtime Environment (21.0+21) (fastdebug build 21-ea+21-LTS-1697)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-ea+21-LTS-1697, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, windows-amd64)
      # Core dump will be written. Default location: C:\\sb\\prod\\1682704971\\testoutput\\test-support\\jtreg_closed_test_hotspot_jtreg_applications_javafuzzer_MediumTest_java\\tmp\\fuzzer.tmp.Z6VkTvrXkp\\hs_err_pid29116.mdmp
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #

      --------------- S U M M A R Y ------------


      ----------System.err:(51/4108)*----------
      java.nio.charset.MalformedInputException: Input length = 1
      at java.base/java.nio.charset.CoderResult.throwException(CoderResult.java:279)
      at java.base/sun.nio.cs.StreamDecoder.implRead(StreamDecoder.java:384)
      at java.base/sun.nio.cs.StreamDecoder.lockedRead(StreamDecoder.java:215)
      at java.base/sun.nio.cs.StreamDecoder.read(StreamDecoder.java:169)
      at java.base/java.io.InputStreamReader.read(InputStreamReader.java:189)
      at java.base/java.io.BufferedReader.fill(BufferedReader.java:161)
      at java.base/java.io.BufferedReader.implReadLine(BufferedReader.java:371)
      at java.base/java.io.BufferedReader.readLine(BufferedReader.java:348)
      at java.base/java.io.BufferedReader.readLine(BufferedReader.java:437)
      at java.base/java.nio.file.Files.readAllLines(Files.java:3394)
      at java.base/java.nio.file.Files.readAllLines(Files.java:3432)
      at applications.javafuzzer.JavaFuzzerRunner.lambda$main$2(JavaFuzzerRunner.java:233)
      at java.base/java.util.stream.ForEachOps$ForEachOp$OfRef.accept(ForEachOps.java:184)
      at java.base/java.util.stream.ReferencePipeline$2$1.accept(ReferencePipeline.java:179)
      at java.base/java.util.stream.ReferencePipeline$3$1.accept(ReferencePipeline.java:197)
      at java.base/java.util.Iterator.forEachRemaining(Iterator.java:133)
      at java.base/java.util.Spliterators$IteratorSpliterator.forEachRemaining(Spliterators.java:1924)
      at java.base/java.util.stream.AbstractPipeline.copyInto(AbstractPipeline.java:509)
      at java.base/java.util.stream.AbstractPipeline.wrapAndCopyInto(AbstractPipeline.java:499)
      at java.base/java.util.stream.ForEachOps$ForEachOp.evaluateSequential(ForEachOps.java:151)
      at java.base/java.util.stream.ForEachOps$ForEachOp$OfRef.evaluateSequential(ForEachOps.java:174)
      at java.base/java.util.stream.AbstractPipeline.evaluate(AbstractPipeline.java:234)
      at java.base/java.util.stream.ReferencePipeline.forEach(ReferencePipeline.java:596)
      at applications.javafuzzer.JavaFuzzerRunner.main(JavaFuzzerRunner.java:231)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
      at java.base/java.lang.reflect.Method.invoke(Method.java:578)
      at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:333)
      at java.base/java.lang.Thread.run(Thread.java:1592)
      java.lang.RuntimeException: Failed to access C:\\sb\\prod\\1682704971\\testoutput\\test-support\\jtreg_closed_test_hotspot_jtreg_applications_javafuzzer_MediumTest_java\\scratch\\0\\crashes\\r6-36\\hs_err_pid29116.mdmp
      at applications.javafuzzer.JavaFuzzerRunner.lambda$main$2(JavaFuzzerRunner.java:237)
      at java.base/java.util.stream.ForEachOps$ForEachOp$OfRef.accept(ForEachOps.java:184)
      at java.base/java.util.stream.ReferencePipeline$2$1.accept(ReferencePipeline.java:179)
      at java.base/java.util.stream.ReferencePipeline$3$1.accept(ReferencePipeline.java:197)
      at java.base/java.util.Iterator.forEachRemaining(Iterator.java:133)
      at java.base/java.util.Spliterators$IteratorSpliterator.forEachRemaining(Spliterators.java:1924)
      at java.base/java.util.stream.AbstractPipeline.copyInto(AbstractPipeline.java:509)
      at java.base/java.util.stream.AbstractPipeline.wrapAndCopyInto(AbstractPipeline.java:499)
      at java.base/java.util.stream.ForEachOps$ForEachOp.evaluateSequential(ForEachOps.java:151)
      at java.base/java.util.stream.ForEachOps$ForEachOp$OfRef.evaluateSequential(ForEachOps.java:174)
      at java.base/java.util.stream.AbstractPipeline.evaluate(AbstractPipeline.java:234)
      at java.base/java.util.stream.ReferencePipeline.forEach(ReferencePipeline.java:596)
      at applications.javafuzzer.JavaFuzzerRunner.main(JavaFuzzerRunner.java:231)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
      at java.base/java.lang.reflect.Method.invoke(Method.java:578)
      at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:333)
      at java.base/java.lang.Thread.run(Thread.java:1592)

      JavaTest Message: Test threw exception: java.lang.RuntimeException
      JavaTest Message: shutting down test

      result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Failed to access C:\sb\prod\1682704971\testoutput\test-support\jtreg_closed_test_hotspot_jtreg_applications_javafuzzer_MediumTest_java\scratch\0\crashes\r6-36\hs_err_pid29116.mdmp


      Here's the crashing thread's stack trace:

      --------------- T H R E A D ---------------

      Current thread (0x0000027b70c39d90): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=32968, stack(0x000000e466300000,0x000000e466400000)]


      Current CompileTask:
      C2: 417 8 % !b Test::bMeth @ 33 (286 bytes)

      Stack: [0x000000e466300000,0x000000e466400000]
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0xbd62a1] os::win32::platform_print_native_stack+0xf1 (os_windows_x86.cpp:236)
      V [jvm.dll+0xe4e5f9] VMError::report+0x1019 (vmError.cpp:815)
      V [jvm.dll+0xe50255] VMError::report_and_die+0x645 (vmError.cpp:1588)
      V [jvm.dll+0xe50964] VMError::report_and_die+0x64 (vmError.cpp:1353)
      V [jvm.dll+0x5316fb] report_vm_error+0x5b (debug.cpp:191)
      V [jvm.dll+0x4cb686] Compile::final_graph_reshaping+0xce6 (compile.cpp:4003)
      V [jvm.dll+0x4c6128] Compile::Optimize+0x1308 (compile.cpp:2450)
      V [jvm.dll+0x4c2da8] Compile::Compile+0x1458 (compile.cpp:841)
      V [jvm.dll+0x3e18ca] C2Compiler::compile_method+0x11a (c2compiler.cpp:121)
      V [jvm.dll+0x4de1c1] CompileBroker::invoke_compiler_on_method+0x881 (compileBroker.cpp:2268)
      V [jvm.dll+0x4db796] CompileBroker::compiler_thread_loop+0x396 (compileBroker.cpp:1945)
      V [jvm.dll+0x7aaa54] JavaThread::thread_main_inner+0x224 (javaThread.cpp:718)
      V [jvm.dll+0xdc666b] Thread::call_run+0x1cb (thread.cpp:220)
      V [jvm.dll+0xbd4bd0] os::win32::thread_native_entry+0xa0 (os_windows.cpp:551)
      C [ucrtbase.dll+0x2268a]
      C [KERNEL32.DLL+0x17974]
      C [ntdll.dll+0x5a0b1]

            Assignee:
            Roland Westrelin
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: