8307131: C2: assert(false) failed: malformed control flow

Reviewed-by: kvn, chagedorn, thartmann